# php-sapihack

./: .gitignore  CMakeLists.txt  CREDITS  README.md  config.m4  config.w32  php_sapihack.h  sapihack.c
examples/: sapihack.gcc-expanded.c
tests/: 001.phpt  002.phpt
